--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,26 +4,27 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="robots" content="index, follow" />
 
   <!-- Primary Meta Tags -->
   <title>PUPT–FLSS | Faculty Loading and Scheduling System</title>
   <meta name="description"
-    content="Streamlining scheduling for faculty, programs, and rooms in PUP Taguig. Efficient academic resource management system." />
-  <meta name="keywords" content="PUP Taguig, scheduling system, faculty load, academic scheduling, FLSS" />
+    content="PUPT Faculty Loading and Scheduling System (FLSS) - A comprehensive platform for managing faculty workload, course scheduling, and academic resource allocation at PUP Taguig. Features automated conflict detection, preference management, and automated schedule reports generation." />
+  <meta name="keywords"
+    content="PUP Taguig, PUPT, scheduling system, faculty load management, academic scheduling, FLSS, PUPT-FLSS, faculty loading and scheduling system, course scheduling, academic resource management, university scheduling software, faculty workload management" />
   <meta name="theme-color" content="#800000" />
 
   <!-- Security Headers -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- <meta http-equiv="Content-Security-Policy" content=" default-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' http://127.0.0.1:8000 http://localhost:8000; script-src 'self' 'unsafe-inline' 'unsafe-eval'; worker-src 'self'; frame-src 'self'; media-src 'self'; form-action 'self'; " /> -->
 
   <!-- Favicon and App Icons -->
-  <link rel="icon" type="image/x-icon" href="assets/images/pup_taguig_logo.svg" />
+  <link rel="icon" type="image/x-icon" href="assets/images/pupt.ico" />
 
   <!-- Base URL -->
   <base href="/" />
 
   <!-- Open Graph / Social Media -->
-  <meta property="og:title" content="PUPT–FLSS | Faculty Load and Schedule System" />
+  <meta property="og:title" content="PUPT–FLSS | Faculty Loading and Scheduling System" />
   <meta property="og:description" content="Streamlining scheduling for faculty, programs, and rooms in PUP Taguig." />
   <meta property="og:image" content="assets/images/pup_taguig_logo.svg" />
   <meta property="og:url" content="https://app.pupt-flss.com" />
@@ -33,7 +34,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="PUPT–FLSS | Faculty Load and Schedule System" />
+  <meta name="twitter:title" content="PUPT–FLSS | Faculty Loading and Scheduling System" />
   <meta name="twitter:description" content="Streamlining scheduling for faculty, programs, and rooms in PUP Taguig." />
   <meta name="twitter:image" content="assets/images/pup_taguig_logo.svg" />
 
@@ -67,6 +68,29 @@
     <link rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   </noscript>
+
+  <!-- Structured Data for Search Engines -->
+  <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "PUPT Faculty Loading and Scheduling System",
+        "applicationCategory": "Education Management Software",
+        "operatingSystem": "Web Browser",
+        "offers": {
+          "@type": "Offer",
+          "availability": "https://schema.org/InStock",
+          "price": "0",
+          "priceCurrency": "PHP"
+        },
+        "provider": {
+          "@type": "Organization",
+          "name": "Polytechnic University of the Philippines Taguig",
+          "alternateName": "PUP Taguig",
+          "url": "https://www.pup.edu.ph/taguig"
+        }
+      }
+    </script>
 </head>
 
 <body>
