--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -23,6 +23,15 @@
   <!-- Base URL -->
   <base href="/" />
 
+  <!-- PWA meta tags -->
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="maroon" />
+  <meta name="apple-mobile-web-app-title" content="PUPT-FLSS" />
+  <link rel="apple-touch-icon" href="assets/icons/maskable-icon-512x512.png" />
+  <link rel="manifest" href="manifest.webmanifest" />
+  <meta name="theme-color" content="#800000" />
+
   <!-- Open Graph / Social Media -->
   <meta property="og:title" content="PUPT–FLSS | Faculty Loading and Scheduling System" />
   <meta property="og:description" content="Streamlining scheduling for faculty, programs, and rooms in PUP Taguig." />
@@ -41,21 +50,21 @@
   <!-- Performance Optimizations -->
   <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
   <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin="" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
 
   <!-- Fonts with display swap -->
   <link rel="preload" as="style"
-    href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&amp;display=swap"
     onload="this.onload=null;this.rel='stylesheet'" />
   <link rel="preload" as="style"
-    href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Round&display=swap"
+    href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Round&amp;display=swap"
     onload="this.onload=null;this.rel='stylesheet'" />
   <link rel="preload" as="style"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&amp;display=swap"
     onload="this.onload=null;this.rel='stylesheet'" />
   <link rel="preload" as="style"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&amp;display=swap"
     onload="this.onload=null;this.rel='stylesheet'" />
 
   <!-- Font fallbacks -->
@@ -96,8 +105,8 @@
 <body>
   <noscript>
     <p>
-      Please enable JavaScript to use the PUPT Faculty Load and Schedule
-      System.
+      Please enable JavaScript to use the PUP Taguig Faculty Loading and
+      Scheduling System.
     </p>
   </noscript>
   <app-root></app-root>
