--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -57,17 +57,21 @@
   <link rel="preload" as="style"
     href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&amp;display=swap"
     onload="this.onload=null;this.rel='stylesheet'" />
-  <link rel="preload" as="style"
-    href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Round&amp;display=swap"
-    onload="this.onload=null;this.rel='stylesheet'" />
-  <link rel="preload" as="style"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&amp;display=swap"
-    onload="this.onload=null;this.rel='stylesheet'" />
-  <link rel="preload" as="style"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&amp;display=swap"
-    onload="this.onload=null;this.rel='stylesheet'" />
 
-  <!-- Font fallbacks -->
+  <!-- Preload critical font stylesheets -->
+  <link rel="preload" href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Round&display=block"
+    as="style" />
+  <link rel="preload"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=block"
+    as="style" />
+
+  <!-- Load the stylesheets -->
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Round&display=block" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=block" />
+  
+    <!-- Font fallbacks -->
   <noscript>
     <link rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap" />
